# DrawyMcDrawface

./: .gitignore  .travis.yml  CMakeLists.txt  DrawyMcDrawface.kdev4  HaskyMcDrawface.cabal  README.md  build.gradle  gradlew.bat  parsey.sh  plugins.cfg  settings.gradle  stack.yaml
.kdev4/: DrawyMcDrawface.kdev4
doc/: .whitepaper.tex.swp  whitepaper.tex
gradle/wrapper/: gradle-wrapper.properties
old/: CompositeModel.cpp  CompositeModel.h  Interpreter.cpp  Interpreter.h  Knowledge.h  ParseTree.cpp  ParseTree.h  Renderer.h  Resolver.cpp  Resolver.h  SceneCommand.cpp  SceneCommand.h  SceneComputer.h  SyntaxNetLink.cpp  SyntaxNetLink.h  askUser.cpp  main.cpp  workflow.cpp  workflow.h
shaders/: default_fragment.frag  default_vertex.vert  fragment.glsl  vertex.glsl
src/: AABB.hs  Abstract.hs  AbstractSceneModel.cpp  AbstractSceneModel.h  Building.hs  CompositeModel.cpp  CompositeModel.h  Concrete.hs  CreateEntityRule.java  Geometry.hs  HalfEdgeDS.hs  Interpreter.cpp  Interpreter.h  Knowledge.cpp  Knowledge.h  Main.hs  Math.hs  Mesh.hs  Model.java  MonotoneTriangulate.hs  ParseTree.cpp  ParseTree.h  Path.hs  PrimitiveModel.java  Primitives.hs  Renderer.cpp  Renderer.h  Rope.hs  SceneCommand.cpp  SceneCommand.h  SceneComputer.cpp  SceneComputer.h  SceneContainer.cpp  SceneContainer.h  SceneModel.cpp  SceneModel.h  SceneStatement.cpp  SceneStatement.h  SentencePart.java  Shaders.hs  (+8 more)
src/main/: main.kt
src/main/java/nl/wernerkroneman/Drawy/: DrawyMcDrawFace.java  DrawyMcDrawFace.kt  Thesaurus.java  package-info.java  (+1 more)
src/main/nl/wernerkroneman/DrawyMcDrawface/: CSymEdge.kt  CSymMesh.kt  Primitives.kt  SymFace.kt
src/main/nl/wernerkroneman/SymboliK/: BinarySymbolicOp.kt  CSymPair.kt  GetSize.kt  Getter.kt  Iterable.kt  Power.kt  Primitives.kt  Product.kt  Scalar.kt  ScalarC.kt  ScalarGetter.kt  Sqrt.kt  Sum.kt  SymFace.kt  SymMesh.kt  Symbolic.kt  SymbolicBinaryOp.kt  UnaryMinus.kt  UnarySymbolicOp.kt  Vector.kt
src/main/rendering/: Face.kt  Scalar.kt  mesh.kt
src/main/symbolic/: BinarySymbolicOp.kt  GetSize.kt  Iterable.kt  Power.kt  Primitives.kt  Product.kt  ScalarC.kt  Sqrt.kt  Sum.kt  SymFace.kt  SymMesh.kt  Symbolic.kt  UnarySymbolicOp.kt  Vector.kt
src/nl/wernerkroneman/Drawy/: BlockingInteractor.java  DrawyMcDrawFace.java  UserInteractor.java  package-info.java
src/nl/wernerkroneman/Drawy/AbstractToConcreteConverter/: AbstractToConcrete.java  PositionResolutionContext.java  PositionalSolver.java
src/nl/wernerkroneman/Drawy/Algorithms/: TopologicalSort.java
src/nl/wernerkroneman/Drawy/ConcreteModelling/: AABB.java  AbstractToConcrete.java  Drawable.java  Graph.java  Mesh.java  MeshFactory.java  PrimitiveGenerator.java  Scene.java  SceneNode.java
src/nl/wernerkroneman/Drawy/GlRenderer/: GlMesh.java  GlRenderer.java  GlVisualiser.java  Renderer.java
src/nl/wernerkroneman/Drawy/ModelEditor/: BlockingInteractorInterface.java  CommandResultSelector.java  CreateEntityCommand.java  CreateEntityEditorCommand.java  CreateEntityRule.java  DescriptionSession.java  DescriptionSessionListener.java  InterpretPhrases.java  Interpreter.java  Knowledge.java  KnowledgeResolver.java  ModelChangeListener.java  ModelResolver.java  ParseTree.java  RecursiveSessionResolver.java  RelativePositionStatement.java  Resolver.java  SceneCommand.java  SentencePart.java  SyntaxNetLink.java  TerminalInteractor.java
src/nl/wernerkroneman/Drawy/Modelling/: AnyModel.java  CompositeModel.java  GroupModel.java  Model.java  PrimitiveModel.java  RelativePositionConstraint.java
src/test/nl/wernerkroneman/SymboliK/: ConstTest.kt  GetterTest.kt  IterableTest.kt  PrimitvesTest.kt  ProductTest.kt  SumTest.kt  SymMeshTest.kt  SymVector3dTest.kt  SymbolicTest.kt
src/test/symbolic/: ConstTest.kt  PrimitvesTest.kt  ProductTest.kt  SumTest.kt  SymMeshTest.kt  SymVector3dTest.kt  SymbolicTest.kt
test/: CMakeLists.txt  InterpreterTest.cpp  InterpreterTest.java  ParseTreeTest.cpp  ParseTreeTest.java  ParserLinkTest.java  SceneCommandTest.java  StatementApplicationTest.cpp  SyntaxNetLinkTest.cpp  gtest.cpp
test/nl/wernerkroneman/Drawy/ConcreteModelling/: AABBTest.java  AbstractToConcreteTest.java
test/nl/wernerkroneman/Drawy/ModelEditor/: EditorCommandTest.java  InterpreterTest.java  ParserLinkTest.java  SceneCommandTest.java
(+189 files in other folders)
